src/test/resources/amyc/typer/passing/FunctionCalls.grading.amy
object FunctionCalls
  fn foo(i: Int(32), j: Boolean): String = {
    if(j) { i < 0 || j; "Hello" } else {foo(i-1, !j)}
  }
end FunctionCalls
