src/test/resources/amyc/typer/failing/IfError3.amy
object IfError
  val x: Int(32) = if (false) { "" } else { "" };
  x
end IfError
